--- a/be/package.json
+++ b/be/package.json
@@ -5,6 +5,8 @@
     "server": "node server.js"
   },
   "dependencies": {
-    "@veritext-replacement-template/fe": "1.0.0"
+    "@prisma/client": "^4.12.0",
+    "@veritext-replacement-template/fe": "1.0.0",
+    "prisma": "^4.12.0"
   }
 }
