--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "fe:start": "yarn --cwd fe start",
     "fe:test": "yarn --cwd fe test",
     "fe:build": "yarn --cwd fe build",
-    "be:server": "node ./be/server.js"
+    "be:server": "node ./be/server.js",
+    "be:dev": "nodemon ./be/server.js"
   }
 }
