--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,1 @@
-{
-  "printWidth": 150,
-  "tabWidth": 2,
-  "singleQuote": true,
-  "trailingComma": "all",
-  "semi": true,
-  "arrowParens": "avoid"
-}
+"@launchpadlab/prettier-config"
