add class structure to app.js and add es6 modules to be, error handling middleware

--- a/be/package.json
+++ b/be/package.json
@@ -5,9 +5,15 @@
     "server": "node server.js"
   },
   "dependencies": {
-    "@veritext-replacement-template/fe": "1.0.0"
+    "@veritext-replacement-template/fe": "1.0.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
-  }
+  },
+  "type": "module"
 }
