--- a/be/package.json
+++ b/be/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@prisma/client": "^4.12.0",
     "@veritext-replacement-template/fe": "1.0.0",
+    "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "prisma": "^4.12.0",
