--- a/be/package.json
+++ b/be/package.json
@@ -11,6 +11,8 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "prisma": "^4.12.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
