--- a/fe/package.json
+++ b/fe/package.json
@@ -14,10 +14,7 @@
     "generate-bundle-stats": "webpack --config config/webpack.config.production.js --profile --json > .webpack-stats.json",
     "lint": "eslint src/ --fix --max-warnings=0",
     "seed:test": "echo 'No script specified, seed skipped'",
-    "start": "yarn && yarn build:development",
-    "test:unit": "jest",
-    "test": "yarn && node scripts/test-suite.mjs",
-    "server": "yarn --cwd ../be node server.js"
+    "start": "yarn && yarn build:development"
   },
   "dependencies": {
     "@babel/core": "^7.16.0",
@@ -72,10 +69,13 @@
     "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
+    "@launchpadlab/eslint-config": "^2.7.0",
     "@launchpadlab/lp-subsection-generator": "^7.2.1",
     "chalk": "^5.2.0",
     "cli-prompt": "^0.6.0",
     "cypress": "^12.1.0",
+    "eslint": "^7.32.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "jest": "^29.3.1",
     "react-dev-utils": "^12.0.1",
     "webpack-bundle-analyzer": "^4.5.0",
