--- a/fe/package.json
+++ b/fe/package.json
@@ -14,7 +14,8 @@
     "generate-bundle-stats": "webpack --config config/webpack.config.production.js --profile --json > .webpack-stats.json",
     "lint": "eslint src/ --fix --max-warnings=0",
     "seed:test": "echo 'No script specified, seed skipped'",
-    "start": "yarn && yarn build:development"
+    "start": "yarn && yarn build:development",
+    "test:unit": "jest"
   },
   "dependencies": {
     "@babel/core": "^7.16.0",
