updated application.yml template

--- a/fe/config/application.template.yml
+++ b/fe/config/application.template.yml
@@ -1,11 +1,16 @@
 development:
-  # ENV
   NODE_ENV: development
+  PROXY_ENFORCE: 'false'
+  PROXIED_API_URL: ''
+  PROXIED_API_TOKEN: ''
 
-  # FE
+  # === FE ===
   API_URL: http://localhost:8080/api/v1
+  FE_PORT: 3000
+ 
 
-  # BE
+  # === BE ===
+  # PORT
   PORT: 8080
 
   # LOG
@@ -19,6 +24,14 @@ development:
   # DATABASE
   DATABASE_URL: your-local-postgres-url
 
+  # SWAGGER
+  SWAGGER_SERVER_URL: http://localhost:3000
+  SWAGGER_ENDPOINT: /api-docs
+  
+  # API
+  BASE_PATH: /api/v1
+  SERVER_STATIC_BUILD: 'false'
+  
 # production:
 #   # ENV
 #   ENV: production
