--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "fe:test": "yarn --cwd fe test",
     "fe:build": "yarn --cwd fe build",
     "be:server": "node ./be/server.js",
-    "dev": "concurrently \"yarn fe:start\" \"yarn be:server\"",
+    "dev": "concurrently --names \"FE,BE\" -c \"bgBlue.bold,bgMagenta.bold\" \"yarn fe:start\" \"yarn be:server\"",
     "test:integration": "cypress run",
     "test": "yarn && node scripts/test-suite.mjs",
     "prepare": "husky install"
