--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "dev": "concurrently --kill-others --names \"FE,BE\" -c \"bgBlue.bold,bgMagenta.bold\" \"yarn fe:start\" \"yarn be:dev\"",
     "test:integration": "cypress run",
     "test": "yarn && node scripts/test-suite.mjs",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "db:seed": "yarn --cwd be seed",
+    "db:generate": "yarn --cwd be generate",
+    "db:migrate:dev": "yarn --cwd be migrate:dev",
+    "db:migrate:prod": "yarn --cwd be migrate:deploy",
+    "db:reset": "yarn --cwd be migrate:reset",
+    "db:gui": "yarn prisma studio"
   },
   "devDependencies": {
     "@launchpadlab/prettier-config": "^1.0.0",
