--- a/be/package.json
+++ b/be/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "nodemon server.js",
-    "server": "node server.js"
+    "server": "node server.js",
+    "seed": "node prisma/seed.js",
+    "generate": "prisma generate",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:reset": "prisma migrate reset",
+    "migrate:deploy": "prisma migrate deploy"
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
