--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,21 @@ cache:
     - ~/.cache/Cypress
 notifications:
   email: false
+services:
+  - postgresql
 addons:
+  postgresql: "14"
   apt:
     packages:
     - libgconf-2-4
+    - postgresql-14
+    - postgresql-client-14
 before_script:
   # ensure application config template is copied, as the server requires these env-var configs to be available
+  - psql -c 'create database travis_ci_test;' -U postgres
   - cp -n fe/config/application.template.yml fe/config/application.yml
+  - cp -n be/prisma/.env.template be/prisma/.env
+  - prisma generate
+  - yarn db:migrate:prod
+  - yarn db:seed
+
