--- a/be/prisma/env.template
+++ b/be/prisma/env.template
@@ -1,3 +1,3 @@
 # A .env file is needed to run prisma commands at /be/prisma/.env
 
-DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA"
+DATABASE_URL="postgresql://postgres@localhost:5432/travis_ci_test"
