--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,12 @@ addons:
   apt:
     packages:
     - libgconf-2-4
+env:
+  global:
+    - PGPORT=5433
 before_script:
   # ensure application config template is copied, as the server requires these env-var configs to be available
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - sudo psql -p 5433 -c 'create database travis_ci_test;' -U postgres
   - cp -n fe/config/application.template.yml fe/config/application.yml
   - cp -n be/prisma/.env.template be/prisma/.env
   - prisma generate
