--- a/be/package.json
+++ b/be/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@veritext-replacement-template/be",
+  "name": "be",
   "version": "1.0.0",
   "scripts": {
     "dev": "nodemon server.js",
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
-    "@veritext-replacement-template/fe": "1.0.0",
+    "fe": "1.0.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
