--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "veritext-replacement-app",
+  "version": "0.0.0",
+  "engines": {
+    "node": ">=18.12.1",
+    "yarn": ">=1.22.19",
+    "postgresql": ">=14.0",
+    "prisma": ">=4.12.0"
+  },
   "private": true,
   "workspaces": [
     "fe",
