--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "engines": {
     "node": ">=18.12.1",
-    "yarn": ">=1.22.19",
-    "postgresql": ">=14.0",
-    "prisma": ">=4.12.0"
+    "yarn": ">=1.22.19"
   },
   "private": true,
   "workspaces": [
