--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "veritext-replacement-app",
   "version": "0.0.0",
+  "license": "UNLICENSED",
   "engines": {
     "node": ">=18.12.1",
     "yarn": ">=1.22.19"
