--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "db:gui": "yarn --cwd be gui",
     "deploy": "yarn && NODE_ENV=production yarn fe:build && NODE_ENV=production yarn be:server",
     "dev": "concurrently --kill-others --names \"FE,BE\" -c \"bgBlue.bold,bgMagenta.bold\" \"yarn fe:start\" \"yarn be:dev\"",
-    "setup": "yarn && cp fe/config/application.template.yml fe/config/application.yml",
+    "setup": "yarn && cp fe/config/application.template.yml fe/config/application.yml && cp be/prisma/env.template be/prisma/.env",
     "test:integration": "cypress run",
     "test": "yarn && node scripts/test-suite.mjs",
     "prepare": "husky install"
