--- a/fe/package.json
+++ b/fe/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@veritext-replacement-template/fe",
+  "name": "fe",
   "version": "1.0.0",
   "private": true,
   "engines": {
     "node": "^18.12.1"
   },
+  "license": "UNLICENSED",
   "scripts": {
     "analyze-bundle": "yarn && yarn generate-bundle-stats && yarn bundle-analyzer-server",
     "build:development": "webpack serve --config ./config/webpack.config.development.js",
