--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "veritext-replacement-app",
+  "version": "0.0.0",
+  "license": "UNLICENSED",
+  "engines": {
+    "node": ">=18.12.1",
+    "yarn": ">=1.22.19"
+  },
   "private": true,
   "workspaces": [
     "fe",
@@ -10,8 +17,15 @@
     "fe:build": "yarn --cwd fe build",
     "be:dev": "yarn --cwd be dev",
     "be:server": "node ./be/server.js",
+    "db:seed": "yarn --cwd be seed",
+    "db:generate": "yarn --cwd be generate",
+    "db:migrate:dev": "yarn --cwd be migrate:dev",
+    "db:migrate:prod": "yarn --cwd be migrate:deploy",
+    "db:reset": "yarn --cwd be migrate:reset",
+    "db:gui": "yarn --cwd be gui",
     "deploy": "yarn && NODE_ENV=production yarn fe:build && NODE_ENV=production yarn be:server",
     "dev": "concurrently --kill-others --names \"FE,BE\" -c \"bgBlue.bold,bgMagenta.bold\" \"yarn fe:start\" \"yarn be:dev\"",
+    "setup": "yarn && cp fe/config/application.template.yml fe/config/application.yml && cp be/prisma/env.template be/prisma/.env",
     "test:integration": "cypress run",
     "test": "yarn && node scripts/test-suite.mjs",
     "prepare": "husky install"
