update lint-staged script to include cjs files

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
       "eslint --fix --max-warnings=0"
     ],
     "fe/src/**/*.{json,scss}": "prettier --write",
-    "be/**/*.{js,json}": [
+    "be/**/*.{js,json,cjs}": [
       "prettier --write",
       "eslint --fix --max-warnings=0"
     ]
