--- a/be/package.json
+++ b/be/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "fe": "1.0.0",
     "prisma": "^4.12.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
@@ -25,6 +26,7 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.8.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   },
