--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Run prisma deploy
         run: yarn db:migrate:prod
       - name: Run production build
-        run: yarn deploy
+        run: yarn test
