add config flags to lint script

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test:integration": "cypress run",
     "test": "yarn && node scripts/test-suite.mjs",
     "prepare": "husky install",
-    "lint": "yarn && yarn --cwd be eslint . --max-warnings=0 && yarn --cwd fe eslint . --max-warnings=0"
+    "lint": "yarn && yarn --cwd be eslint . --config .eslintrc.cjs --max-warnings=0 && yarn --cwd fe eslint . --config .eslintrc.js --max-warnings=0"
   },
   "devDependencies": {
     "@launchpadlab/prettier-config": "^1.0.0",
