--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -7,6 +7,9 @@ jobs:
   linters:
     runs-on: ubuntu-latest
 
+    env:
+      NODE_ENV: development
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
