refactor eslint so packages and config are sourced from root

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,12 @@
 /be/.env
 /be/**/logs/*
 be/node_modules/
+be/package.json
+fe/package.json
 fe/node_modules/
 
 # e2e test output
 nohup.out
 /tmp/**/*
+
+yarn-error.log
