--- a/be/package.json
+++ b/be/package.json
@@ -10,11 +10,11 @@
     "migrate:reset": "prisma migrate reset",
     "migrate:deploy": "prisma migrate deploy",
     "server": "node server.js",
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "lint:test": "yarn eslint . --max-warnings=0"
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
-    "fe": "1.0.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -26,7 +26,6 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.8.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   },
