remove old lint scripts and add new ones. run lint

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -31,6 +31,6 @@ jobs:
         with:
           # fail if there are ugly files
           dry: true
-          prettier_options: --write **/*.{js,md,json,scss,cjs}
+          prettier_options: --write **/*.{js,jsx,scss}
       - name: Check for eslint errors/warnings
-        run: yarn lint
+        run: yarn lint:test
