--- a/be/package.json
+++ b/be/package.json
@@ -10,8 +10,7 @@
     "migrate:reset": "prisma migrate reset",
     "migrate:deploy": "prisma migrate deploy",
     "server": "node server.js",
-    "seed": "node prisma/seed.js",
-    "lint:test": "yarn eslint . --max-warnings=0"
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
