--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: '18.12.1'
           cache: 'yarn'
       - name: Setup
-        run: yarn setup
+        run: yarn setup:ci
       - name: Check for ugly files (Prettier)
         uses: creyD/prettier_action@v4.2
         with:
@@ -31,4 +31,4 @@ jobs:
           dry: true
           prettier_options: --write **/*.{js,jsx,scss}
       - name: Check for eslint errors/warnings
-        run: yarn lint:test
+        run: yarn run eslint --fix --max-warnings=0 .
