--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -31,4 +31,4 @@ jobs:
           dry: true
           prettier_options: --write **/*.{js,jsx,scss}
       - name: Check for eslint errors/warnings
-        run: yarn run eslint --fix --max-warnings=0 .
+        run:  eslint --fix --max-warnings=0 .
