install linters globablly in the container

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -16,8 +16,8 @@ jobs:
         with:
           node-version: '18.12.1'
           cache: 'yarn'
-      - name: Setup
-        run: yarn setup:ci
+      - name: Install linters globally (Prettier, Eslint)
+        run: yarn global add eslint prettier
       - name: Check for ugly files (Prettier)
         uses: creyD/prettier_action@v4.2
         with:
