--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           node-version: '18.12.1'
           cache: 'yarn'
+      - name: Install dependencies
+        run: yarn setup:ci
       - name: Install linters globally (Prettier, Eslint)
         run: yarn global add eslint prettier
       - name: Check for ugly files (Prettier)
