--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -27,4 +27,4 @@ jobs:
           dry: true
           prettier_options: --write **/*.{js,jsx,scss}
       - name: Check for eslint errors/warnings
-        run:  yarn run eslint . --fix --max-warnings=0 --ext .js,.jsx
+        run:  yarn lint:ci
