--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -26,5 +26,5 @@ jobs:
           # fail if there are ugly files
           dry: true
           prettier_options: --write **/*.{js,jsx,scss}
-      - name: Check for eslint errors/warnings
-        run:  yarn lint:ci
+      - name: Run ESLint
+        run: eslint . --ext .js,.jsx
