--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -6,6 +6,7 @@ on: push
 jobs:
   linters:
     runs-on: ubuntu-latest
+    working-directory: .
     
     steps:
       - name: Checkout
@@ -15,7 +16,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.12.1'
-          cache: 'yarn'
       - name: Install dependencies
         run: yarn setup:ci
       # - name: Install linters globally (Prettier, Eslint)
@@ -27,5 +27,4 @@ jobs:
           dry: true
           prettier_options: --write **/*.{js,jsx,scss}
       - name: Run ESLint
-        uses: ./
         run: eslint . --ext .js,.jsx
