--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: node_js
 dist: focal
+env:
+  global:
+  - PGPORT=5432
+  - PGUSER=postgres
+  - PGPASSWORD=postgres
+  - PGHOST=localhost
 services:
   - postgresql
 cache:
@@ -15,5 +21,4 @@ addons:
       - libgconf-2-4
 before_script:
   # ensure application config template is copied, as the server requires these env-var configs to be available
-  - PGPASSWORD=postgres psql -c 'create database veritext_box;' -U postgres -p 5432
   - yarn setup
