--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,5 @@
 language: node_js
 dist: focal
-env:
-  global:
-  - PGPORT=5432
-  - PGUSER=postgres
-  - PGPASSWORD=postgres
-  - PGHOST=localhost
 services:
   - postgresql
 cache:
@@ -21,4 +15,6 @@ addons:
       - libgconf-2-4
 before_script:
   # ensure application config template is copied, as the server requires these env-var configs to be available
+  - psql -c 'create database veritext_box;' -U postgres
+  - psql -c "CREATE USER postgres WITH PASSWORD postgres;" -U postgres
   - yarn setup
