--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "test:integration": "cypress run",
     "test": "yarn && node scripts/test-suite.mjs",
     "prepare": "husky install",
-    "lint": "yarn eslint --fix --ext .js,.jsx, . && yarn prettier --write .",
-    "lint:ci": "yarn eslint --fix --max-warnings=0 ."
+    "lint": "yarn eslint --fix --ext .js,.jsx,.json . && yarn prettier --write .",
+    "lint:ci": "yarn eslint --fix --ext .js,.jsx,.json --max-warnings=0 ."
   },
   "devDependencies": {
     "@launchpadlab/eslint-config": "^3.0.1",
@@ -44,11 +44,5 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7"
-  },
-  "lint-staged": {
-    "**/*.{js,jsx,scss}": [
-      "prettier --write",
-      "eslint --fix --max-warnings=0"
-    ]
   }
 }
