--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,5 @@
 {
   "**/*.{js,jsx,scss,json,md}": "prettier --write",
-  "**/*.{js,jsx}": "eslint --fix --max-warnings=0"
+  "fe/**/*.{js,jsx}": "eslint --fix --max-warnings=0",
+  "be/**/*.{js,jsx}": "eslint --fix --max-warnings=0"
 }
