make sure right DATABASE_URL is copied for test env for GH actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
           # Maps tcp port 5432 on service container to the host
           - 5432:5432
     env:
-      DATABASE_URL: postgresql://postgres:postgres@localhost:5432/veritext_box
+      DATABASE_URL: postgresql://postgres:postgres@localhost:5432/veritext_box_test
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
