--- a/fe/package.json
+++ b/fe/package.json
@@ -28,6 +28,7 @@
     "@sentry/browser": "^7.26.0",
     "autoprefixer": "^10.4.4",
     "aws-sdk": "^2.1360.0",
+    "axios": "^1.3.5",
     "babel-loader": "^9.1.0",
     "bourbon": "^7.2.0",
     "bourbon-neat": "^4.0.0",
